--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Online Teer</string>
+    <string name="Forget_password"> <u>Forgot Password? </u></string>
+    <string name="Register_an_account"> <u>Register_an_account</u></string>
 </resources>
